Segfault when curve deform modifier and curve itself is parented to mesh object #38420

Closed
opened 2014-01-31 17:18:46 +01:00 by Chris Toledo · 8 comments

System Information
Operating system and graphics card
Arch Linux x86_64, Radeon 7950 (Catalyst driver)

Blender Version
Broken: 2.69.10 a7b1349
Worked: (optional)

Short description of error
When trying to open a .blend file where a mesh is being modified by a curve modifier, and the curve is parented to the mesh as segfault occurs. Console output and backtrace: http://pastebin.com/PvpyxUiY

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Open Default scene
Add a curve
Add curve modifier to cube object, assign the new curve to it
Select the curve, shift+select the mesh and parent (alt+p, Object)
Save file, try and open saved file: Error then segfault
crash.blend

**System Information** Operating system and graphics card Arch Linux x86_64, Radeon 7950 (Catalyst driver) **Blender Version** Broken: 2.69.10 a7b1349 Worked: (optional) **Short description of error** When trying to open a .blend file where a mesh is being modified by a curve modifier, and the curve is parented to the mesh as segfault occurs. Console output and backtrace: http://pastebin.com/PvpyxUiY **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Open Default scene Add a curve Add curve modifier to cube object, assign the new curve to it Select the curve, shift+select the mesh and parent (alt+p, Object) Save file, try and open saved file: Error then segfault [crash.blend](https://archive.blender.org/developer/F75708/crash.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @uberscientist

Added subscriber: @uberscientist
Member

Added subscriber: @beta-tester

Added subscriber: @beta-tester
Member

i can confirm that issue on windows as well:
following the steps,
by parenting curve to Cube ([Ctrl]+- [x], Object)
i get a message on the console:

Dependency cycle detected:
  Cube depends on BezierCurve through Curve Modifier.
  BezierCurve depends on Cube through Parent.

if i save that file and reopen it (e.g. with open recent), blender crash immediately (crash log is empty)

System Information
Windows 8.1 64bit

Blender Version
Broken: blender-2.69-5611fb6-win64.zip, ...
Worked: ..., blender-2.69-19103b4-win64.zip, ..., blender-2.69-c925b5b-win64-vc12.zip.

i can confirm that issue on windows as well: following the steps, by parenting curve to Cube ([Ctrl]+- [x], Object) i get a message on the console: ``` Dependency cycle detected: Cube depends on BezierCurve through Curve Modifier. BezierCurve depends on Cube through Parent. ``` if i save that file and reopen it (e.g. with open recent), blender crash immediately (crash log is empty) **System Information** Windows 8.1 64bit **Blender Version** Broken: blender-2.69-5611fb6-win64.zip, ... Worked: ..., blender-2.69-19103b4-win64.zip, ..., blender-2.69-c925b5b-win64-vc12.zip.
Sergey Sharybin self-assigned this 2014-02-03 13:19:18 +01:00

This issue was referenced by blender/blender-addons-contrib@3d8c1068ba

This issue was referenced by blender/blender-addons-contrib@3d8c1068baf4e2e2d8b40d3dd030c04e0783d117

This issue was referenced by 3d8c1068ba

This issue was referenced by 3d8c1068baf4e2e2d8b40d3dd030c04e0783d117

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3d8c1068ba.

Closed by commit 3d8c1068ba.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38420
No description provided.